2008-03-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- remove the wep_passphrase_widget

	* src/wireless-security/ws-wep-passphrase.c
	  src/wireless-security/ws-wep-passphrase.h
	  src/wireless-security/Makefile.am
		- remove WEP passphrase widget

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- Fold WEP passphrase widget into WEP key widget

	* src/wireless-dialog.c
	  src/connection-editor/page-wireless-security.c
		- WEP passphrase widget is now part of WirelessSecurityWEPKey

2008-03-26  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/connection-editor/ce-page.[ch]: Add a "changed" signal so that the pages
	can tell when they change and the connection editor to notice it.

	* src/connection-editor/nm-connection-editor.c: Listen to the CEPage::changed
	signals, validate them, and update the dialog's "OK" button's sensitivity
	accordingly.
	(nm_connection_editor_run_and_close): Update the connection by iterating over
	all pages and letting each update their own part.

	* src/connection-editor/page-*.c: Add a stub for required "update_connection"
	virtual function.

	* src/connection-editor/page-wireless-security.c (ce_page_wireless_security_new):
	Fix a bug where the default wireless combo box would always be the first item.
	Don't take the "ok_button" argument, it's handled by the framework now.
	(validate): Implement.

2008-03-26  Dan Williams  <dcbw@redhat.com>

	Fixup to match libnm-glib VPN changes in NM r3504; handle VPN connections
	like any other connection and use NMClient to activate/deactivate then
	instead of the VPNManager.

2008-03-24  Dan Williams  <dcbw@redhat.com>

	Fixup to match libnm-glib changes in NM r3491

2008-03-19  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wireless.c
		- (wireless_dialog_response_cb): fix up for ActivateDevice ->
			ActivateConnection

	* src/applet.c
		- (applet_menu_item_activate_helper): fix up for ActivateDevice ->